--- a/references.bib
+++ b/references.bib
@@ -405,3 +405,14 @@ Citation Key: nilsson{\_}2024},
 	note = {Citation Key: berroth-2019},
 	langid = {canadian}
 }
+
+@misc{mccarthy-2020,
+	title = {After 20-year battle, Channel island Sark finally earns the right to exist on the internet with its own top-level domain},
+	author = {McCarthy, Kieren},
+	year = {2020},
+	month = {03},
+	date = {2020-03-23},
+	url = {https://www.theregister.com/2020/03/23/sark_cctld_iso/},
+	note = {Citation Key: mccarthy-2020},
+	langid = {en}
+}
